# Physical-Competing

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: sync_res.cmake
res/fighters/bas/: bas.ansq
res/music/: disclaimer
src/: animation.c  animation.h  audiostruct.h  entity.c  entity.h  loopbody.c  loopbody.h  main.c  main.h  sc_process.c  sc_process.h  scene.c  scene.h  scenecontroller.c  scenecontroller.h  soundsystem.c  soundsystem.h  ss_process.c  ss_process.h  timesystem.c  timesystem.h  ts_process.c  ts_process.h
src/entities/: allfighterstruct.h  asia.c  asia.h  asiaanim.c  asiaanim.h  bas.c  bas.h  basanim.c  basanim.h  bottle.c  bottle.h  characterstate.h  drill.c  drill.h  exitbutton.c  fightcontroller.c  fightcontroller.h  fighteranim.c  fighteranim.h  fighterstruct.h  fluke.c  fluke.h  flukeanim.c  flukeanim.h  golf.c  golf.h  golfanim.c  golfanim.h  ithallstage.c  ithallstage.h  jobpaper.c  jobpaper.h  leftFighter.c  leftFighter.h  leftbanner.c  leftbanner.h  lefthealthbar.c  lefthealthbar.h  leftultibar.c  leftultibar.h  (+32 more)
src/entities/mainmenu/: exitbutton.c  exitbutton.h  menubg.c  menubg.h  menuselector.c  menuselector.h  menustate.h  optionbutton.c  optionbutton.h  phycompetlogo.c  phycompetlogo.h  startbutton.c  startbuttontext.c  startbuttontext.h
src/entities/pcutils/: tweener.c  tweener.h
src/entities/selectionmenu/: allbanner.c  allbanner.h  asiabanner.c  asiabanner.h  basbanner.c  basbanner.h  flukebanner.c  flukebanner.h  golfbanner.c  golfbanner.h  leftfighterdisplay.c  leftfighterdisplay.h  leftnamedisplay.c  leftnamedisplay.h  p1select.c  p1select.h  p2select.c  p2select.h  rightfighterdisplay.c  rightfighterdisplay.h  rightnamedisplay.c  rightnamedisplay.h  selectioncheck.c  selectioncheck.h  shadescreen.c  shadescreen.h
src/scenes/: anotherscene.c  anotherscene.h  ithallscene.c  ithallscene.h  menuscene.c  menuscene.h  myscene.c  myscene.h
